Attempt to stop the dhcp reservation wrapping. (#1739)
Some people see this, but I cannot reproduce it, which makes fixing it tricky.
So .. a guess.

--- a/files/app/resource/css/admin.css
+++ b/files/app/resource/css/admin.css
@@ -567,7 +567,7 @@ label.switch
 #ctrl-modal .reservation > div:first-child label
 {
     white-space: normal;
-    width: 45px;
+    width: 40px;
     align-self: center;
     text-align: center;
 }
